# ecs

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci-test.yml
docs/: annotated.html  classecs_1_1component__pool-members.html  classecs_1_1component__pool.html  classecs_1_1entity-members.html  classecs_1_1entity.html  classecs_1_1registry-members.html  classecs_1_1registry.html  classecs_1_1view-members.html  classecs_1_1view.html  classecs_1_1view__iterator-members.html  classecs_1_1view__iterator.html  classes.html  component__pool_8cpp_source.html  component__pool_8hpp_source.html  dir_3756d50f4003bc63fa3fe49460f9c79d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_963e57a8294c229b5ff887c0b5b78922.html  dir_d44c64559bbebec7f509842c48db8b23.html  ecs_8hpp_source.html  entity_8cpp_source.html  entity_8hpp_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  index.html  menudata.js  registry_8cpp_source.html  registry_8hpp_source.html  view_8hpp_source.html  view__iterator_8hpp_source.html
docs/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_9.js  (+5 more)
include/: ecs.hpp  entity.hpp  registry.hpp  view.hpp
src/: entity.cpp  registry.cpp
test/: CMakeLists.txt  component_pool.cpp  const_view_iterator.cpp  misc.cpp  readme.cpp  registry.cpp  view.cpp  view_iterator.cpp
(+4 files in other folders)
